--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx4g -Dfile.encoding=utf-8
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
-
-
+org.gradle.configureondemand=true
