--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=utf-8
 org.gradle.parallel=true
-org.gradle.configureondemand=true
+
+
